[project]
name = "maupoly"
version = "0.9.0"
description = "Play Maupoly with your friends in Telegram chats"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0",
    "loguru>=0.7.3",
    "pillow>=11.2.1",
    "pydantic-settings>=2.8.1",
]


# Ruff linter ----------------------------------------------------------

[tool.ruff]
line-length = 80
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "PL", "UP", "ANN", "W", "ASYNC"]
ignore = ["D407", "D107", "D213", "D203"]
